2012-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* about2html: full support for overstrike and page breaks

2012-07-15  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_get_balloon_color):
	new function

	* filechooser.c: markcolor depending on balloon color

	* lua/lua-avt.c (lavt_menu): markcolor depending on balloon color

	* lua/lua-akfavatar-prg.c (ask_file): different color

2012-07-11  Andreas K. Foerster  <info@akfoerster.de>

	* configure: use gnu99 (or MinGW disables some POSIX functions)

2012-07-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (initialize_lua):
	for GNU/Linux add relative paths to package.path and package.cpath
	lua/lua-avt.c (set_datapath): don't do that in the module

	* lua/lua-akfavatar-prg.c (initialize_lua):
	load lua-akfavatar already

2012-07-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (get_base_directory): new functions
	(set_datapath): adapted

	* lua/lua-avt.c (set_datapath):
	eventually also add to package.path and package.cpath

	* basedir.c: new file
	lua/lua-akfavatar-prg.c (find_scripts, local_lua_dir): adapted
	lua/lua-avt.c (set_datapath): adapted

2012-07-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-common.c (avt_prepare_raw_audio_data):
	new function
	replaces avt_load_raw_audio_data and avt_set_raw_audio_capacity
	all callers adapted

2012-07-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_pager):
	move the button to the right instead of down if it doesn't fit
	this is a workaround for a bug in SDL

2012-07-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (AVT_MAKE_BOOL): macro removed

2012-07-03  Andreas K. Foerster  <info@akfoerster.de>

	* configure: enable C99 syntax and start using it

2012-07-02  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_translate): new function
	lua/akfavatar/lang.lua: deleted

	* avatar-sdl.c (avt_license):